# text-classfication

./: .gitignore  pyproject.toml  requirements.txt  test.ipynb
pro/data/: text_data.py  text_preprosseing.py
pro/model/: transformer_tc.py
pro/util/: dataset.py
