[tool.poetry]
name = "text-classfication-lin"
version = "0.1.0"
description = ""
authors = ["peihsuanlin5566 <jnes40722@gmail.com>"]
readme = "README.md"
packages = [{include = "pro"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
transformers = "^4.25.1"
pydantic = "^1.10.4"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl"}
ipadic = "^1.0.0"
bs4 = "^0.0.1"
neologdn = "^0.5.1"
ginza = "^5.1.2"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
